--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -55,5 +55,13 @@
         <item name="android:textSize">24dp</item>
     </style>
 
+    <style name="textsize">
+        <item name="android:textSize">24dp</item>
+        <item name="android:textColor">#008080</item>
+    </style>
 
+    <style name="textcolor">
+
+        <item name="android:textColor">#FFFF</item>
+    </style>
 </resources>
