--- a/app/src/main/res/layout/activity_emergencyhotline1.xml
+++ b/app/src/main/res/layout/activity_emergencyhotline1.xml
@@ -32,8 +32,8 @@
         style="@style/homebutton"
         android:layout_width="78dp"
         android:layout_height="24dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
         android:background="	#008080"
         android:onClick="process"
         android:text="EVAC.CENTER"
@@ -182,8 +182,8 @@
         app:layout_constraintGuide_percent="0.015" />
 
     <ScrollView
-        android:layout_width="361dp"
-        android:layout_height="390dp"
+        android:layout_width="415dp"
+        android:layout_height="421dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
